Refactor improved tests and resolved comments